tests/test_files/invalid/syntax/task_id_at_repeat.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Task helloWorld
    Repeat not_a_number
End
